warnings compile fix

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -40,7 +40,7 @@
                 app:layout_constraintTop_toTopOf="@+id/rv_cards"
                 android:background="@color/white"
                 tools:layout_editor_absoluteX="0dp"
-                android:visibility="@{viewmodel.isSearchListViewVisible() ? View.VISIBLE : View.GONE}"
+                android:visibility="@{safeUnbox(viewmodel.isSearchListViewVisible()) ? View.VISIBLE : View.GONE}"
                 app:onListViewItemClickListener="@{(parent, viewClick, position, id) -> viewmodel.onSuggestionsListItemClick(position)}"
         />
     </androidx.constraintlayout.widget.ConstraintLayout>
