--- a/app/src/main/res/layout/c_menu_top.xml
+++ b/app/src/main/res/layout/c_menu_top.xml
@@ -9,7 +9,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="@{viewmodel.isToolbarVisible()? View.VISIBLE : View.INVISIBLE}"
+            android:visibility="@{safeUnbox(viewmodel.isToolbarVisible())? View.VISIBLE : View.INVISIBLE}"
             android:focusableInTouchMode="true"
             android:id="@+id/toolbar_layout"
     >
@@ -37,7 +37,7 @@
                 android:singleLine="true"
                 app:queryBackground="@android:color/transparent"
                 app:layout_constraintHorizontal_bias="0.494"
-                android:visibility="@{viewmodel.isSearchViewVisible()? View.VISIBLE : View.INVISIBLE}"
+                android:visibility="@{safeUnbox(viewmodel.isSearchViewVisible()) ? View.VISIBLE : View.INVISIBLE}"
                 app:queryHint="@string/search_view_hint"
                 app:onQueryTextListener="@{viewmodel.onQuerySearchView}"
 
