--- a/app/src/main/res/layout/c_social_network.xml
+++ b/app/src/main/res/layout/c_social_network.xml
@@ -26,7 +26,7 @@
 
 		<ImageButton
 			android:id = "@+id/btn_user"
-			android:visibility = "@{viewmodelauth.isBtnUserLoggedVisible() ? View.GONE : View.VISIBLE}"
+			android:visibility = "@{safeUnbox(viewmodelauth.isBtnUserLoggedVisible()) ? View.GONE : View.VISIBLE}"
 			android:layout_width = "48dp"
 			android:layout_height = "48dp"
 			app:layout_constraintTop_toTopOf = "@+id/bnt_ok"
@@ -40,7 +40,7 @@
 
 		<ImageButton
 			android:id = "@+id/btn_user_on"
-			android:visibility = "@{viewmodelauth.isBtnUserLoggedVisible() ? View.VISIBLE : View.GONE}"
+			android:visibility = "@{safeUnbox(viewmodelauth.isBtnUserLoggedVisible()) ? View.VISIBLE : View.GONE}"
 			android:layout_width = "48dp"
 			android:layout_height = "48dp"
 			app:layout_constraintTop_toTopOf = "@+id/bnt_ok"
