--- a/app/src/main/res/layout/reg_contacts_recycler_item.xml
+++ b/app/src/main/res/layout/reg_contacts_recycler_item.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable name="viewmodel" type="ru.jobni.jobni.viewmodel.RegViewModel"/>
-        <variable name="position" type="Integer"/>
+        <variable name="position" type="int"/>
     </data>
     <LinearLayout
             android:layout_width="match_parent"
