--- a/app/src/main/res/layout/reg_phase_recycler_item.xml
+++ b/app/src/main/res/layout/reg_phase_recycler_item.xml
@@ -2,7 +2,7 @@
 <layout>
     <data>
         <variable name="viewModel" type="ru.jobni.jobni.viewmodel.RegViewModel" />
-        <variable name="position" type="Integer" />
+        <variable name="position" type="int" />
         <import type="android.view.View"/>
     </data>
 	<LinearLayout
@@ -18,7 +18,7 @@
 		android:layout_height = "wrap_content"
 		android:layout_margin = "16dp"
 		android:background = "@drawable/shape_button"
-		android:textColor = "@{position == viewModel.numberOfVisibleItemReg ? @color/white : @color/black}"
+		android:textColor = "@{position == safeUnbox(viewModel.numberOfVisibleItemReg) ? @color/white : @color/black}"
 		android:textSize = "18sp"
 		android:text='@{position == 0 ? "1.Регистрационные данные" : (position == 1 ? "2.Основная информация" : (position == 2 ? "3.Контактные данные" : ""))}'
 		/>
@@ -27,7 +27,7 @@
 		android:id = "@+id/container_reg_rv_item"
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
-		android:visibility="@{position == viewModel.numberOfVisibleItemReg ? View.VISIBLE : View.GONE}"
+		android:visibility="@{position == safeUnbox(viewModel.numberOfVisibleItemReg) ? View.VISIBLE : View.GONE}"
 		/>
 </LinearLayout>
 </layout>
