--- a/app/src/main/res/layout/c_registration_02.xml
+++ b/app/src/main/res/layout/c_registration_02.xml
@@ -3,7 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="viewmodel" type="ru.jobni.jobni.viewmodel.RegViewModel"/>
+        <variable name="regViewModel" type="ru.jobni.jobni.viewmodel.RegViewModel"/>
+        <variable name="mainViewModel" type="ru.jobni.jobni.viewmodel.MainViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:tools="http://schemas.android.com/tools"
@@ -26,7 +27,11 @@
                      app:layout_constraintStart_toStartOf="@+id/background"
                      app:layout_constraintEnd_toEndOf="@+id/background"
                      android:layout_marginTop="16dp"
-                     android:contentDescription="TODO" app:srcCompat="@drawable/ic_user"/>
+                     android:contentDescription="TODO"
+                     app:srcCompat="@drawable/ic_user"
+                     android:onClick='@{()-> mainViewModel.openCamera()}'
+                     errorImage="@{@drawable/ic_user}"
+                     imageUrl="@{mainViewModel.outputPhotoUri}"/>
         <EditText android:id="@+id/surname"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
@@ -38,7 +43,7 @@
                   style="@style/text_color_and_size"
                   android:inputType="text"
                   android:hint="@string/surname"
-                  android:text="@={viewmodel.regSurname}"/>
+                  android:text="@={regViewModel.regSurname}"/>
         <EditText android:id="@+id/name"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
@@ -49,7 +54,7 @@
                   style="@style/text_color_and_size"
                   android:inputType="text"
                   android:hint="@string/name"
-                  android:text="@={viewmodel.regName}"/>
+                  android:text="@={regViewModel.regName}"/>
         <EditText android:id="@+id/middle_name"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
@@ -60,7 +65,7 @@
                   style="@style/text_color_and_size"
                   android:inputType="text"
                   android:hint="@string/middle_name"
-                  android:text="@={viewmodel.regMiddlename}"/>
+                  android:text="@={regViewModel.regMiddlename}"/>
         <Button android:id="@+id/next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
