--- a/app/src/main/res/layout/c_authorization_user.xml
+++ b/app/src/main/res/layout/c_authorization_user.xml
@@ -7,6 +7,11 @@
 	<data>
 
 		<variable
+			name = "viewmodel"
+			type = "ru.jobni.jobni.viewmodel.MainViewModel"
+			/>
+
+		<variable
 			name = "viewmodelauth"
 			type = "ru.jobni.jobni.viewmodel.AuthViewModel"
 			/>
@@ -31,21 +36,46 @@
 			android:background = "@drawable/shape_card"
 			/>
 
+		<TextView
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			app:layout_constraintTop_toTopOf = "@+id/iv_background"
+			app:layout_constraintStart_toStartOf = "@+id/iv_background"
+			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+			android:layout_margin = "8dp"
+			android:textStyle = "bold"
+			android:textColor = "@color/font_color"
+			android:textSize = "14sp"
+			android:text = "@string/user_auth_info_text"
+			/>
+
+		<include
+			android:id = "@+id/include_social_network"
+			layout = "@layout/c_social_network"
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			app:layout_constraintTop_toTopOf = "@+id/iv_background"
+			app:layout_constraintStart_toStartOf = "@+id/iv_background"
+			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+			android:layout_marginTop = "36dp"
+			app:viewmodel = "@{viewmodel}"
+			/>
+
 		<EditText
 			android:id = "@+id/et_mail"
 			android:layout_width = "0dp"
 			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toTopOf = "parent"
+			app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
 			app:layout_constraintStart_toStartOf = "@+id/iv_background"
 			app:layout_constraintEnd_toEndOf = "@id/iv_background"
-			android:layout_marginTop = "60dp"
+			android:layout_marginTop = "16dp"
 			android:layout_marginStart = "16dp"
 			android:layout_marginEnd = "16dp"
 			style = "@style/text_color_and_size"
 			android:inputType = "textEmailAddress"
 			android:hint = "@string/mail_1"
 			android:text = "@={viewmodelauth.authUser}"
-			app:layout_constraintHorizontal_bias = "0.0"
+			app:layout_constraintHorizontal_bias = "1.0"
 			/>
 
 		<EditText
@@ -59,7 +89,7 @@
 			style = "@style/text_color_and_size"
 			android:inputType = "textPassword|numberPassword"
 			android:hint = "@string/password_1"
-			android:text="@={viewmodelauth.authPass}"
+			android:text = "@={viewmodelauth.authPass}"
 			/>
 
 		<Button
