--- a/app/src/main/res/layout/c_authorization_user_logged_change_pass.xml
+++ b/app/src/main/res/layout/c_authorization_user_logged_change_pass.xml
@@ -51,14 +51,13 @@
 
 		<include
 			android:id = "@+id/include_social_network"
-			layout = "@layout/c_social_network"
+			layout = "@layout/c_social_network_auth_user"
 			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
 			app:layout_constraintTop_toTopOf = "@+id/iv_background"
 			app:layout_constraintStart_toStartOf = "@+id/iv_background"
 			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
 			android:layout_marginTop = "36dp"
-			app:viewmodel = "@{viewmodel}"
 			/>
 
 		<Button
