--- a/app/src/main/res/layout/c_card_vacancy_open_map_open.xml
+++ b/app/src/main/res/layout/c_card_vacancy_open_map_open.xml
@@ -40,10 +40,11 @@
 					android:layout_width = "match_parent"
 					android:layout_height = "0dp"
 					app:layout_constraintTop_toTopOf = "parent"
-					app:layout_constraintBottom_toBottomOf = "@+id/menu"
+					app:layout_constraintBottom_toBottomOf = "parent"
 					app:layout_constraintStart_toStartOf = "parent"
 					app:layout_constraintEnd_toEndOf = "parent"
 					android:layout_marginTop = "16dp"
+					android:layout_marginBottom = "16dp"
 					android:layout_marginStart = "16dp"
 					android:layout_marginEnd = "16dp"
 					android:background = "@drawable/shape_card"
@@ -61,6 +62,8 @@
 					android:textColor = "@color/font_color"
 					android:textSize = "18sp"
 					android:text = "@{vacancy.vacancyName}"
+					android:maxWidth = "230dp"
+					android:maxLength = "60"
 					tools:text = "@string/card_vacancy_close_vacancy_name"
 					/>
 
@@ -68,41 +71,98 @@
 					android:id = "@+id/eye"
 					android:layout_width = "wrap_content"
 					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toTopOf = "@+id/name"
-					app:layout_constraintBottom_toBottomOf = "@+id/name"
-					app:layout_constraintStart_toEndOf = "@+id/name"
+					app:layout_constraintTop_toTopOf = "@+id/online"
+					app:layout_constraintBottom_toBottomOf = "@+id/online"
+					app:layout_constraintStart_toEndOf = "@+id/online"
 					android:layout_marginStart = "8dp"
 					app:srcCompat = "@drawable/ic_eye"
 					/>
 
 				<TextView
 					android:id = "@+id/newbie"
-					android:layout_width = "wrap_content"
+					android:layout_width = "60dp"
 					android:layout_height = "wrap_content"
 					app:layout_constraintTop_toTopOf = "@+id/background"
 					app:layout_constraintEnd_toEndOf = "@+id/background"
 					android:layout_marginTop = "16dp"
-					android:layout_marginEnd = "16dp"
+					android:layout_marginEnd = "30dp"
 					android:textStyle = "bold"
 					android:textColor = "@color/font_color"
 					android:textSize = "14sp"
-					android:text = "@{vacancy.salaryLevelNewbie}"
-					tools:text = "@string/card_vacancy_close_newbie"
+					android:textAlignment = "textEnd"
+					app:formattedTextSalary = "@{vacancy.salaryLevelNewbie}"
+					/>
+
+				<TextView
+					android:id = "@+id/newbie_text"
+					android:layout_width = "wrap_content"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toTopOf = "@+id/newbie"
+					app:layout_constraintEnd_toStartOf = "@+id/newbie"
+					android:layout_marginEnd = "2dp"
+					android:textStyle = "bold"
+					android:textColor = "@color/font_color"
+					android:textSize = "14sp"
+					android:text = "@string/text_newbie"
+					/>
+
+				<TextView
+					android:id = "@+id/newbie_money"
+					android:layout_width = "wrap_content"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toTopOf = "@+id/background"
+					app:layout_constraintEnd_toEndOf = "@+id/background"
+					android:layout_marginTop = "14dp"
+					android:layout_marginEnd = "16dp"
+					android:textStyle = "bold"
+					android:textColor = "@color/font_color"
+					android:textSize = "16sp"
+					android:text = "@string/text_ruble"
+					android:gravity = "center"
+					android:textAlignment = "center"
 					/>
 
 				<TextView
 					android:id = "@+id/experienced"
-					android:layout_width = "wrap_content"
+					android:layout_width = "60dp"
 					android:layout_height = "wrap_content"
 					app:layout_constraintTop_toBottomOf = "@+id/newbie"
-					app:layout_constraintStart_toStartOf = "@+id/newbie"
-					app:layout_constraintEnd_toEndOf = "@+id/newbie"
+					app:layout_constraintEnd_toEndOf = "@+id/background"
 					android:layout_marginTop = "8dp"
+					android:layout_marginEnd = "30dp"
 					android:textStyle = "bold"
 					android:textColor = "@color/font_color"
 					android:textSize = "14sp"
-					android:text = "@{vacancy.salaryLevelExperienced}"
-					tools:text = "@string/card_vacancy_close_experienced"
+					android:textAlignment = "textEnd"
+					app:formattedTextSalary = "@{vacancy.salaryLevelExperienced}"
+					/>
+
+				<TextView
+					android:id = "@+id/experienced_text"
+					android:layout_width = "wrap_content"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toTopOf = "@+id/experienced"
+					app:layout_constraintEnd_toStartOf = "@+id/experienced"
+					android:layout_marginEnd = "2dp"
+					android:textStyle = "bold"
+					android:textColor = "@color/font_color"
+					android:textSize = "14sp"
+					android:text = "@string/text_experienced"
+					/>
+
+				<TextView
+					android:id = "@+id/experienced_money"
+					android:layout_width = "wrap_content"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toBottomOf = "@+id/newbie_money"
+					app:layout_constraintEnd_toEndOf = "@+id/newbie_money"
+					android:layout_marginTop = "6dp"
+					android:textStyle = "bold"
+					android:textColor = "@color/font_color"
+					android:textSize = "16sp"
+					android:text = "@string/text_ruble"
+					android:gravity = "center"
+					android:textAlignment = "center"
 					/>
 
 				<TextView
@@ -383,8 +443,8 @@
 					android:textStyle = "bold"
 					android:textColor = "@color/font_color"
 					android:textSize = "16sp"
+					android:text = "@{vacancy.companyName}"
 					tools:text = "@string/company"
-					android:text="@{vacancy.companyName}"
 					/>
 
 				<ImageView
