--- a/app/src/main/res/layout/c_card_vacancy_open_map_open.xml
+++ b/app/src/main/res/layout/c_card_vacancy_open_map_open.xml
@@ -548,6 +548,7 @@
 					app:itemIconTint = "@color/font_color"
 					app:itemTextColor = "@color/font_color"
 					app:labelVisibilityMode = "labeled"
+					app:elevation="1dp"
 					/>
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</ScrollView>
