--- a/app/src/main/res/layout/c_registration_01_mail.xml
+++ b/app/src/main/res/layout/c_registration_01_mail.xml
@@ -1,98 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:android="http://schemas.android.com/apk/res/android">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<data>
-		<variable name="viewmodel" type="ru.jobni.jobni.viewmodel.RegViewModel"/>
-	</data>
+    <data>
+        <variable name="viewmodel" type="ru.jobni.jobni.viewmodel.RegViewModel"/>
+    </data>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-	xmlns:tools = "http://schemas.android.com/tools"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	tools:context = ".MainActivity">
-	<ImageView android:id = "@+id/background"
-		android:layout_width = "match_parent"
-		android:layout_height = "0dp"
-		app:layout_constraintTop_toTopOf = "parent" android:contentDescription="TODO" 
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		android:layout_margin = "16dp"
-		android:background = "@drawable/shape_card"/>
-	<EditText android:id = "@+id/referral_link"
-		android:layout_width = "0dp"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toTopOf = "@id/background"
-		app:layout_constraintStart_toStartOf = "@id/background"
-		app:layout_constraintEnd_toEndOf = "@id/background"
-		android:layout_marginTop = "16dp"
-		android:layout_marginHorizontal = "16dp"
-		style = "@style/text_color_and_size"
-		android:inputType = "text"
-		android:hint = "@string/referral_link"
-		android:text="@={viewmodel.regReferer}"/>
-	<TextView android:id = "@+id/referral_message"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/referral_link"
-		app:layout_constraintStart_toStartOf = "@+id/referral_link"
-		app:layout_constraintEnd_toEndOf = "@+id/referral_link"
-		android:layout_marginTop = "16dp"
-		android:textSize = "18sp"
-		android:text = "@string/referral_message"
-		android:textColor = "@color/online"/>
-	<include android:id = "@+id/include_social_network"
-		layout = "@layout/c_social_network"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/referral_message"
-		app:layout_constraintStart_toStartOf = "@+id/background"
-		app:layout_constraintEnd_toEndOf = "@+id/background"
-		android:layout_marginTop = "16dp"/>
-	<EditText android:id = "@+id/mail"
-		android:layout_width = "0dp"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
-		app:layout_constraintStart_toStartOf = "@+id/background"
-		app:layout_constraintEnd_toEndOf = "@id/background"
-		android:layout_marginTop = "16dp"
-		android:layout_marginHorizontal = "16dp"
-		style = "@style/text_color_and_size"
-		android:inputType = "textEmailAddress"
-		android:hint = "@string/mail_1"
-			  android:text="@={viewmodel.regMail}"/>
-	<EditText android:id = "@+id/password_1"
-		android:layout_width = "0dp"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/mail"
-		app:layout_constraintStart_toStartOf = "@+id/mail"
-		app:layout_constraintEnd_toEndOf = "@+id/mail"
-		android:layout_marginTop = "16dp"
-		style = "@style/text_color_and_size"
-		android:inputType = "textPassword"
-		android:hint = "@string/password_1"
-			  android:text="@={viewmodel.regPassword}"/>
-	<EditText android:id = "@+id/password_2"
-		android:layout_width = "0dp"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/password_1"
-		app:layout_constraintStart_toStartOf = "@+id/mail"
-		app:layout_constraintEnd_toEndOf = "@+id/mail"
-		android:layout_marginTop = "16dp"
-		style = "@style/text_color_and_size"
-		android:inputType = "textPassword"
-		android:hint = "@string/password_4"
-			  android:text="@={viewmodel.regPassConfirm}"/>
-	<Button android:id = "@+id/bind_account"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/password_2"
-		app:layout_constraintStart_toStartOf = "@+id/background"
-		app:layout_constraintEnd_toEndOf = "@+id/background"
-		android:layout_marginTop = "16dp"
-		android:background = "@drawable/shape_button"
-		android:text = "@string/bind_account"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MainActivity">
+        <ImageView android:id="@+id/background"
+                   android:layout_width="match_parent"
+                   android:layout_height="0dp"
+                   app:layout_constraintTop_toTopOf="parent" android:contentDescription="TODO"
+                   app:layout_constraintBottom_toBottomOf="parent"
+                   app:layout_constraintStart_toStartOf="parent"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   android:layout_margin="16dp"
+                   android:background="@drawable/shape_card"/>
+        <EditText android:id="@+id/referral_link"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  app:layout_constraintTop_toTopOf="@id/background"
+                  app:layout_constraintStart_toStartOf="@id/background"
+                  app:layout_constraintEnd_toEndOf="@id/background"
+                  android:layout_marginTop="16dp"
+                  android:layout_marginHorizontal="16dp"
+                  style="@style/text_color_and_size"
+                  android:inputType="text"
+                  android:hint="@string/referral_link"
+                  android:text="@={viewmodel.regReferer}"/>
+        <TextView android:id="@+id/referral_message"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  app:layout_constraintTop_toBottomOf="@+id/referral_link"
+                  app:layout_constraintStart_toStartOf="@+id/referral_link"
+                  app:layout_constraintEnd_toEndOf="@+id/referral_link"
+                  android:layout_marginTop="16dp"
+                  android:textSize="18sp"
+                  android:text="@string/referral_message"
+                  android:textColor="@color/online"/>
+        <include android:id="@+id/include_social_network"
+                 layout="@layout/c_social_network"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 app:layout_constraintTop_toBottomOf="@+id/referral_message"
+                 app:layout_constraintStart_toStartOf="@+id/background"
+                 app:layout_constraintEnd_toEndOf="@+id/background"
+                 android:layout_marginTop="16dp"/>
+        <EditText android:id="@+id/mail"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  app:layout_constraintTop_toBottomOf="@+id/include_social_network"
+                  app:layout_constraintStart_toStartOf="@+id/background"
+                  app:layout_constraintEnd_toEndOf="@id/background"
+                  android:layout_marginTop="16dp"
+                  android:layout_marginHorizontal="16dp"
+                  style="@style/text_color_and_size"
+                  android:inputType="textEmailAddress"
+                  android:hint="@string/mail_1"
+                  android:text="@={viewmodel.regMail}"/>
+        <EditText android:id="@+id/password_1"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  app:layout_constraintTop_toBottomOf="@+id/mail"
+                  app:layout_constraintStart_toStartOf="@+id/mail"
+                  app:layout_constraintEnd_toEndOf="@+id/mail"
+                  android:layout_marginTop="16dp"
+                  style="@style/text_color_and_size"
+                  android:inputType="textPassword"
+                  android:hint="@string/password_1"
+                  android:text="@={viewmodel.regPassword}"/>
+        <EditText android:id="@+id/password_2"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  app:layout_constraintTop_toBottomOf="@+id/password_1"
+                  app:layout_constraintStart_toStartOf="@+id/mail"
+                  app:layout_constraintEnd_toEndOf="@+id/mail"
+                  android:layout_marginTop="16dp"
+                  style="@style/text_color_and_size"
+                  android:inputType="textPassword"
+                  android:hint="@string/password_4"
+                  android:text="@={viewmodel.regPassConfirm}"/>
+        <Button android:id="@+id/bind_account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/password_2"
+                app:layout_constraintStart_toStartOf="@+id/background"
+                app:layout_constraintEnd_toEndOf="@+id/background"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/shape_button"
+                android:text="@string/bind_account"
+        android:onClick="@{() -> viewmodel.btnRegUserClick()}"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
