--- a/app/src/main/res/layout/c_card_vacancy_open_map_open.xml
+++ b/app/src/main/res/layout/c_card_vacancy_open_map_open.xml
@@ -42,6 +42,7 @@
 
 		<include
 			android:id = "@+id/load_icon"
+			app:viewmodel = "@{viewmodel}"
 			layout = "@layout/search_loading_icon"
 			android:layout_width = "match_parent"
 			android:layout_height = "wrap_content"
