--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="?attr/actionBarSize"
-	android:background="?attr/colorPrimary"
-	android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+<layout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	>
+
+	<data>
+
+		<variable
+			name = "viewmodel"
+			type = "ru.jobni.jobni.viewmodel.MainViewModel"
+			/>
+
+		<import type = "android.view.View"/>
+	</data>
+
+	<androidx.coordinatorlayout.widget.CoordinatorLayout
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		>
+
+		<com.google.android.material.appbar.AppBarLayout
+			android:id = "@+id/appbar"
+			android:layout_width = "match_parent"
+			android:layout_height = "wrap_content"
+			android:theme = "@style/AppTheme.AppBarOverlay"
+			>
+
+			<androidx.appcompat.widget.Toolbar
+				android:id = "@+id/toolbar"
+				android:layout_width = "match_parent"
+				android:layout_height = "?attr/actionBarSize"
+				android:background = "?attr/colorPrimary"
+				app:popupTheme = "@style/AppTheme.PopupOverlay"
+				/>
+		</com.google.android.material.appbar.AppBarLayout>
+	</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</layout>
