--- a/app/src/main/res/layout/c_authorization.xml
+++ b/app/src/main/res/layout/c_authorization.xml
@@ -11,6 +11,11 @@
 			type = "ru.jobni.jobni.viewmodel.MainViewModel"
 			/>
 
+		<variable
+			name = "viewmodelauth"
+			type = "ru.jobni.jobni.viewmodel.AuthViewModel"
+			/>
+
 		<import type = "android.view.View"/>
 	</data>
 
@@ -54,6 +59,7 @@
 			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
 			android:layout_marginTop = "36dp"
 			app:viewmodel = "@{viewmodel}"
+			app:viewmodelauth = "@{viewmodelauth}"
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
