--- a/app/src/main/res/layout/c_authorization_user.xml
+++ b/app/src/main/res/layout/c_authorization_user.xml
@@ -59,6 +59,7 @@
 			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
 			android:layout_marginTop = "36dp"
 			app:viewmodel = "@{viewmodel}"
+			app:viewmodelauth = "@{viewmodelauth}"
 			/>
 
 		<EditText
