--- a/app/src/main/res/layout/c_authorization_user_logged_change_mail.xml
+++ b/app/src/main/res/layout/c_authorization_user_logged_change_mail.xml
@@ -22,122 +22,125 @@
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
+		android:layout_margin = "16dp"
+		android:background = "@drawable/shape_card"
 		>
 
-		<ImageView
-			android:id = "@+id/iv_background"
+		<ScrollView
 			android:layout_width = "match_parent"
-			android:layout_height = "0dp"
-			app:layout_constraintTop_toTopOf = "parent"
-			app:layout_constraintBottom_toBottomOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			app:layout_constraintEnd_toEndOf = "parent"
-			android:layout_margin = "16dp"
-			android:background = "@drawable/shape_card"
-			/>
+			android:layout_height = "match_parent"
+			>
 
-		<TextView
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toTopOf = "@+id/iv_background"
-			app:layout_constraintStart_toStartOf = "@+id/iv_background"
-			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
-			android:layout_margin = "8dp"
-			android:textStyle = "bold"
-			android:textColor = "@color/font_color"
-			android:textSize = "14sp"
-			android:text = "@string/user_auth_change_mail_text"
-			/>
+			<androidx.constraintlayout.widget.ConstraintLayout
+				android:id = "@+id/iv_background"
+				android:layout_width = "match_parent"
+				android:layout_height = "wrap_content"
+				>
 
-		<include
-			android:id = "@+id/include_social_network"
-			layout = "@layout/c_social_network"
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toTopOf = "@+id/iv_background"
-			app:layout_constraintStart_toStartOf = "@+id/iv_background"
-			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
-			android:layout_marginTop = "36dp"
-			app:viewmodel = "@{viewmodel}"
-			app:viewmodelauth = "@{viewmodelauth}"
-			/>
+				<TextView
+					android:layout_width = "wrap_content"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toTopOf = "@+id/iv_background"
+					app:layout_constraintStart_toStartOf = "@+id/iv_background"
+					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					android:layout_margin = "8dp"
+					android:textStyle = "bold"
+					android:textColor = "@color/font_color"
+					android:textSize = "14sp"
+					android:text = "@string/user_auth_change_mail_text"
+					/>
 
-		<Button
-			android:id = "@+id/btn_change_user_pass"
-			android:layout_width = "180dp"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
-			app:layout_constraintStart_toStartOf = "@+id/iv_background"
-			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
-			android:layout_marginTop = "26dp"
-			android:background = "@drawable/shape_button"
-			android:text = "@string/btn_change_user_pass_text"
-			android:onClick = '@{() -> viewmodel.setFragmentLaunch("AuthUserLoggedPass")}'
-			/>
+				<include
+					android:id = "@+id/include_social_network"
+					layout = "@layout/c_social_network"
+					android:layout_width = "wrap_content"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toTopOf = "@+id/iv_background"
+					app:layout_constraintStart_toStartOf = "@+id/iv_background"
+					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					android:layout_marginTop = "36dp"
+					app:viewmodel = "@{viewmodel}"
+					app:viewmodelauth = "@{viewmodelauth}"
+					/>
 
-		<Button
-			android:id = "@+id/btn_change_user_mail"
-			android:layout_width = "180dp"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/btn_change_user_pass"
-			app:layout_constraintStart_toStartOf = "@+id/iv_background"
-			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
-			android:layout_marginTop = "16dp"
-			android:background = "@drawable/shape_button"
-			android:text = "@string/btn_change_user_mail_text"
-			/>
+				<Button
+					android:id = "@+id/btn_change_user_pass"
+					android:layout_width = "180dp"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
+					app:layout_constraintStart_toStartOf = "@+id/iv_background"
+					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					android:layout_marginTop = "26dp"
+					android:background = "@drawable/shape_button"
+					android:text = "@string/btn_change_user_pass_text"
+					android:onClick = '@{() -> viewmodel.setFragmentLaunch("AuthUserLoggedPass")}'
+					/>
 
-		<Button
-			android:id = "@+id/btn_change_user_auth"
-			android:layout_width = "180dp"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/btn_change_user_mail"
-			app:layout_constraintStart_toStartOf = "@+id/iv_background"
-			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
-			android:layout_marginTop = "16dp"
-			android:background = "@drawable/shape_badge"
-			android:text = "@string/btn_change_user_auth_text"
-			android:clickable = "false"
-			/>
+				<Button
+					android:id = "@+id/btn_change_user_mail"
+					android:layout_width = "180dp"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toBottomOf = "@+id/btn_change_user_pass"
+					app:layout_constraintStart_toStartOf = "@+id/iv_background"
+					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					android:layout_marginTop = "16dp"
+					android:background = "@drawable/shape_button"
+					android:text = "@string/btn_change_user_mail_text"
+					/>
 
-		<EditText
-			android:id = "@+id/et_new_pass"
-			android:layout_width = "0dp"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/btn_change_user_auth"
-			app:layout_constraintStart_toStartOf = "@+id/iv_background"
-			app:layout_constraintEnd_toEndOf = "@id/iv_background"
-			android:layout_marginTop = "26dp"
-			android:layout_marginStart = "16dp"
-			android:layout_marginEnd = "16dp"
-			style = "@style/text_color_and_size"
-			android:inputType = "textEmailAddress"
-			android:hint = "@string/user_auth_new_mail"
-			/>
+				<Button
+					android:id = "@+id/btn_change_user_auth"
+					android:layout_width = "180dp"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toBottomOf = "@+id/btn_change_user_mail"
+					app:layout_constraintStart_toStartOf = "@+id/iv_background"
+					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					android:layout_marginTop = "16dp"
+					android:background = "@drawable/shape_badge"
+					android:text = "@string/btn_change_user_auth_text"
+					android:clickable = "false"
+					/>
 
-		<EditText
-			android:id = "@+id/et_new_pass_confirm"
-			android:layout_width = "0dp"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/et_new_pass"
-			app:layout_constraintStart_toStartOf = "@+id/et_new_pass"
-			app:layout_constraintEnd_toEndOf = "@+id/et_new_pass"
-			android:layout_marginTop = "16dp"
-			style = "@style/text_color_and_size"
-			android:inputType = "textEmailAddress"
-			android:hint = "@string/user_auth_new_mail_confirm"
-			/>
+				<EditText
+					android:id = "@+id/et_new_pass"
+					android:layout_width = "0dp"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toBottomOf = "@+id/btn_change_user_auth"
+					app:layout_constraintStart_toStartOf = "@+id/iv_background"
+					app:layout_constraintEnd_toEndOf = "@id/iv_background"
+					android:layout_marginTop = "26dp"
+					android:layout_marginStart = "16dp"
+					android:layout_marginEnd = "16dp"
+					style = "@style/text_color_and_size"
+					android:inputType = "textEmailAddress"
+					android:hint = "@string/user_auth_new_mail"
+					/>
 
-		<Button
-			android:id = "@+id/btn_change_user_pass_confirm"
-			android:layout_width = "180dp"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/et_new_pass_confirm"
-			app:layout_constraintStart_toStartOf = "@+id/iv_background"
-			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
-			android:layout_marginTop = "16dp"
-			android:background = "@drawable/shape_button"
-			android:text = "@string/btn_change_user_pass_confirm_text"
-			/>
+				<EditText
+					android:id = "@+id/et_new_pass_confirm"
+					android:layout_width = "0dp"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toBottomOf = "@+id/et_new_pass"
+					app:layout_constraintStart_toStartOf = "@+id/et_new_pass"
+					app:layout_constraintEnd_toEndOf = "@+id/et_new_pass"
+					android:layout_marginTop = "16dp"
+					style = "@style/text_color_and_size"
+					android:inputType = "textEmailAddress"
+					android:hint = "@string/user_auth_new_mail_confirm"
+					/>
+
+				<Button
+					android:id = "@+id/btn_change_user_pass_confirm"
+					android:layout_width = "180dp"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toBottomOf = "@+id/et_new_pass_confirm"
+					app:layout_constraintStart_toStartOf = "@+id/iv_background"
+					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					android:layout_marginTop = "16dp"
+					android:background = "@drawable/shape_button"
+					android:text = "@string/btn_change_user_pass_confirm_text"
+					/>
+			</androidx.constraintlayout.widget.ConstraintLayout>
+		</ScrollView>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
