--- a/app/src/main/res/layout/c_authorization_user_logged_change_mail.xml
+++ b/app/src/main/res/layout/c_authorization_user_logged_change_mail.xml
@@ -32,7 +32,6 @@
 			>
 
 			<androidx.constraintlayout.widget.ConstraintLayout
-				android:id = "@+id/iv_background"
 				android:layout_width = "match_parent"
 				android:layout_height = "wrap_content"
 				>
@@ -40,9 +39,9 @@
 				<TextView
 					android:layout_width = "wrap_content"
 					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toTopOf = "@+id/iv_background"
-					app:layout_constraintStart_toStartOf = "@+id/iv_background"
-					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					app:layout_constraintTop_toTopOf = "parent"
+					app:layout_constraintStart_toStartOf = "parent"
+					app:layout_constraintEnd_toEndOf = "parent"
 					android:layout_margin = "8dp"
 					android:textStyle = "bold"
 					android:textColor = "@color/font_color"
@@ -55,9 +54,9 @@
 					layout = "@layout/c_social_network"
 					android:layout_width = "wrap_content"
 					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toTopOf = "@+id/iv_background"
-					app:layout_constraintStart_toStartOf = "@+id/iv_background"
-					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					app:layout_constraintTop_toTopOf = "parent"
+					app:layout_constraintStart_toStartOf = "parent"
+					app:layout_constraintEnd_toEndOf = "parent"
 					android:layout_marginTop = "36dp"
 					app:viewmodel = "@{viewmodel}"
 					app:viewmodelauth = "@{viewmodelauth}"
@@ -68,8 +67,8 @@
 					android:layout_width = "180dp"
 					android:layout_height = "wrap_content"
 					app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
-					app:layout_constraintStart_toStartOf = "@+id/iv_background"
-					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					app:layout_constraintStart_toStartOf = "parent"
+					app:layout_constraintEnd_toEndOf = "parent"
 					android:layout_marginTop = "26dp"
 					android:background = "@drawable/shape_button"
 					android:text = "@string/btn_change_user_pass_text"
@@ -81,8 +80,8 @@
 					android:layout_width = "180dp"
 					android:layout_height = "wrap_content"
 					app:layout_constraintTop_toBottomOf = "@+id/btn_change_user_pass"
-					app:layout_constraintStart_toStartOf = "@+id/iv_background"
-					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					app:layout_constraintStart_toStartOf = "parent"
+					app:layout_constraintEnd_toEndOf = "parent"
 					android:layout_marginTop = "16dp"
 					android:background = "@drawable/shape_button"
 					android:text = "@string/btn_change_user_mail_text"
@@ -93,8 +92,8 @@
 					android:layout_width = "180dp"
 					android:layout_height = "wrap_content"
 					app:layout_constraintTop_toBottomOf = "@+id/btn_change_user_mail"
-					app:layout_constraintStart_toStartOf = "@+id/iv_background"
-					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					app:layout_constraintStart_toStartOf = "parent"
+					app:layout_constraintEnd_toEndOf = "parent"
 					android:layout_marginTop = "16dp"
 					android:background = "@drawable/shape_badge"
 					android:text = "@string/btn_change_user_auth_text"
@@ -106,8 +105,8 @@
 					android:layout_width = "0dp"
 					android:layout_height = "wrap_content"
 					app:layout_constraintTop_toBottomOf = "@+id/btn_change_user_auth"
-					app:layout_constraintStart_toStartOf = "@+id/iv_background"
-					app:layout_constraintEnd_toEndOf = "@id/iv_background"
+					app:layout_constraintStart_toStartOf = "parent"
+					app:layout_constraintEnd_toEndOf = "parent"
 					android:layout_marginTop = "26dp"
 					android:layout_marginStart = "16dp"
 					android:layout_marginEnd = "16dp"
@@ -134,8 +133,8 @@
 					android:layout_width = "180dp"
 					android:layout_height = "wrap_content"
 					app:layout_constraintTop_toBottomOf = "@+id/et_new_pass_confirm"
-					app:layout_constraintStart_toStartOf = "@+id/iv_background"
-					app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+					app:layout_constraintStart_toStartOf = "parent"
+					app:layout_constraintEnd_toEndOf = "parent"
 					android:layout_marginTop = "16dp"
 					android:background = "@drawable/shape_button"
 					android:text = "@string/btn_change_user_pass_confirm_text"
