--- a/app/src/main/res/anim/slide_up.xml
+++ b/app/src/main/res/anim/slide_up.xml
@@ -3,6 +3,7 @@
 
 	<translate
 		android:duration="1000"
-		android:fromYDelta="100%"
-		android:toYDelta="0" />
+		android:fromYDelta="-100%"
+		android:toYDelta="0"
+    />
 </set>
