--- a/app/src/main/res/layout/c_registration_02.xml
+++ b/app/src/main/res/layout/c_registration_02.xml
@@ -72,8 +72,11 @@
                 app:layout_constraintEnd_toEndOf="@+id/background"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/shape_button"
-                android:text="@string/next" android:layout_marginStart="8dp"
+                android:text="@string/next"
+                android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/middle_name"/>
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/middle_name"
+                android:onClick="@{() -> regViewModel.btnRegContactFaceClick()}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
