--- a/app/src/main/res/layout/c_social_network.xml
+++ b/app/src/main/res/layout/c_social_network.xml
@@ -7,7 +7,7 @@
 	<data>
 
 		<variable
-			name = "viewmodel"
+			name = "viewmodelmain"
 			type = "ru.jobni.jobni.viewmodel.MainViewModel"
 			/>
 
@@ -15,6 +15,11 @@
 			name = "viewmodelauth"
 			type = "ru.jobni.jobni.viewmodel.AuthViewModel"
 			/>
+
+		<variable
+				name="viewmodelreg"
+				type="ru.jobni.jobni.viewmodel.RegViewModel"
+				/>
 
 		<import type = "android.view.View"/>
 	</data>
@@ -35,35 +40,34 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_user"
 			android:background = "@drawable/shape_badge"
-			android:onClick = '@{() -> viewmodel.setFragmentLaunch("AuthUser")}'
+			android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserMail" : "AuthUser")}'
 			/>
 
 		<ImageButton
-			android:id = "@+id/btn_user_on"
-			android:visibility = "@{safeUnbox(viewmodelauth.isBtnUserLoggedVisible()) ? View.VISIBLE : View.GONE}"
-			android:layout_width = "48dp"
-			android:layout_height = "48dp"
-			app:layout_constraintTop_toTopOf = "@+id/bnt_ok"
-			app:layout_constraintBottom_toBottomOf = "@+id/bnt_ok"
-			app:layout_constraintEnd_toStartOf = "@+id/btn_phone"
-			android:layout_marginEnd = "12dp"
-			app:srcCompat = "@drawable/ic_user"
-			android:background = "@drawable/shape_button"
-			android:onClick = '@{() -> viewmodel.setFragmentLaunch("AuthUserLogged")}'
-			/>
-
+				android:id="@+id/btn_user_on"
+				android:visibility="@{safeUnbox(viewmodelauth.isBtnUserLoggedVisible()) ? View.VISIBLE : View.GONE}"
+				android:layout_width="48dp"
+				android:layout_height="48dp"
+				app:layout_constraintTop_toTopOf="@+id/bnt_ok"
+				app:layout_constraintBottom_toBottomOf="@+id/bnt_ok"
+				app:layout_constraintEnd_toStartOf="@+id/btn_phone"
+				android:layout_marginEnd="12dp"
+				app:srcCompat="@drawable/ic_user"
+				android:background="@drawable/shape_button"
+				android:onClick='@{() -> viewmodelmain.setFragmentLaunch("AuthUserLogged")}'
+		/>
 		<ImageButton
-			android:id = "@+id/btn_phone"
-			android:layout_width = "48dp"
-			android:layout_height = "48dp"
-			app:layout_constraintTop_toTopOf = "@+id/bnt_ok"
-			app:layout_constraintBottom_toBottomOf = "@+id/bnt_ok"
-			app:layout_constraintEnd_toStartOf = "@+id/btn_vk"
-			android:layout_marginEnd = "12dp"
-			app:srcCompat = "@drawable/ic_phone"
-			android:background = "@drawable/shape_badge"
-			/>
-
+				android:id="@+id/btn_phone"
+				android:layout_width="48dp"
+				android:layout_height="48dp"
+				app:layout_constraintTop_toTopOf="@+id/bnt_ok"
+				app:layout_constraintBottom_toBottomOf="@+id/bnt_ok"
+				app:layout_constraintEnd_toStartOf="@+id/btn_vk"
+				android:layout_marginEnd="12dp"
+				app:srcCompat="@drawable/ic_phone"
+				android:background="@drawable/shape_badge"
+                android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserPhone" : "AuthUser")}'
+		/>
 		<ImageButton
 			android:id = "@+id/btn_vk"
 			android:layout_width = "48dp"
@@ -74,6 +78,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_vk"
 			android:background = "@drawable/shape_badge"
+            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -85,6 +90,7 @@
 			app:layout_constraintEnd_toEndOf = "@+id/btn_discord"
 			app:srcCompat = "@drawable/ic_ok"
 			android:background = "@drawable/shape_badge"
+            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -97,6 +103,7 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_instagram"
 			android:background = "@drawable/shape_badge"
+            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -109,6 +116,7 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_telegram"
 			android:background = "@drawable/shape_badge"
+            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -121,6 +129,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_gmail"
 			android:background = "@drawable/shape_badge"
+            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -133,6 +142,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_facebook"
 			android:background = "@drawable/shape_badge"
+            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -147,6 +157,7 @@
 			android:layout_marginEnd = "16dp"
 			app:srcCompat = "@drawable/ic_mail_ru"
 			android:background = "@drawable/shape_badge"
+            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -159,6 +170,7 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_discord"
 			android:background = "@drawable/shape_badge"
+            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -171,6 +183,7 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_microsoft"
 			android:background = "@drawable/shape_badge"
+            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
