--- a/app/src/main/res/layout/nav_header_left.xml
+++ b/app/src/main/res/layout/nav_header_left.xml
@@ -1,37 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<layout
 	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	xmlns:tools = "http://schemas.android.com/tools"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	android:orientation = "vertical"
 	>
 
-	<com.google.android.material.tabs.TabLayout
-		android:id = "@+id/tab_layout_nav_left"
+	<data>
+
+		<variable
+			name = "viewmodelmain"
+			type = "ru.jobni.jobni.viewmodel.MainViewModel"
+			/>
+
+		<import type = "android.view.View"/>
+	</data>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width = "match_parent"
-		android:layout_height = "60dp"
-		style = "@style/menu_left_tab_layout"
+		android:layout_height = "match_parent"
 		>
 
-		<com.google.android.material.tabs.TabItem
-			android:id = "@+id/tab_item_user"
+		<TextView
 			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
-			tools:text = "@string/nav_header_left_user_tab"
+			app:layout_constraintTop_toTopOf = "@+id/linearLayout"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			android:text = "TTTTTTTTTTTTTTTTTTTTT"
 			/>
 
-		<com.google.android.material.tabs.TabItem
-			android:id = "@+id/tab_item_owner"
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			tools:text = "@string/nav_header_left_owner_tab"
-			/>
-	</com.google.android.material.tabs.TabLayout>
+		<LinearLayout
+			android:id = "@+id/linearLayout"
+			android:visibility = "@{safeUnbox(viewmodelmain.isNoAuthRegVisible()) ? View.VISIBLE : View.GONE}"
+			android:layout_width = "match_parent"
+			android:layout_height = "match_parent"
+			app:layout_constraintTop_toTopOf = "parent"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			android:orientation = "vertical"
+			>
 
-	<androidx.viewpager.widget.ViewPager
-		android:id = "@+id/view_pager_nav_left"
-		android:layout_width = "match_parent"
-		android:layout_height = "wrap_content"
-		/>
-</LinearLayout>
+			<com.google.android.material.tabs.TabLayout
+				android:id = "@+id/tab_layout_nav_left"
+				android:layout_width = "match_parent"
+				android:layout_height = "60dp"
+				style = "@style/menu_left_tab_layout"
+				>
+
+				<com.google.android.material.tabs.TabItem
+					android:id = "@+id/tab_item_user"
+					android:layout_width = "wrap_content"
+					android:layout_height = "wrap_content"
+					tools:text = "@string/nav_header_left_user_tab"
+					/>
+
+				<com.google.android.material.tabs.TabItem
+					android:id = "@+id/tab_item_owner"
+					android:layout_width = "wrap_content"
+					android:layout_height = "wrap_content"
+					tools:text = "@string/nav_header_left_owner_tab"
+					/>
+			</com.google.android.material.tabs.TabLayout>
+
+			<androidx.viewpager.widget.ViewPager
+				android:id = "@+id/view_pager_nav_left"
+				android:layout_width = "match_parent"
+				android:layout_height = "wrap_content"
+				/>
+		</LinearLayout>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
